<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TabooSettingsActivity" android:background="@color/colorPrimaryLight"
>

    <TextView
            android:text="@string/taboo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taboo_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.038" android:textSize="30sp"
            android:textColor="@color/colorAccent" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.503"/>
    <View
            android:id="@+id/divider_taboo_1"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/taboo_text"
            android:layout_marginTop="68dp" app:layout_constraintHorizontal_bias="0.494"/>
    <View
            android:id="@+id/divider_taboo_2"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintTop_toBottomOf="@+id/taboo_start_button" android:layout_marginTop="84dp"/>
    <TextView
            android:text="@string/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/colorSecondaryLightText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/divider_taboo_2"
            app:layout_constraintVertical_bias="0.733"/>
    <SeekBar
            android:layout_width="160dp"
            android:layout_height="26dp"
            android:id="@+id/seekBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rounds_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:max="10" app:layout_constraintHorizontal_bias="0.438"/>
    <TextView
            android:text="@string/taboo_rounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rounds_text"
            app:layout_constraintTop_toBottomOf="@+id/divider_taboo_1" android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.356" android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/taboo_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" app:layout_constraintHorizontal_bias="0.492"
            android:textSize="20sp" android:textColor="@color/colorAccent"/>
    <EditText
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/round_time_input" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.341"/>
    <Button
            android:text="@string/btn_taboo_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taboo_start_button" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/round_time_input" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.482"
            android:background="@drawable/main_button_shape" android:textColor="@color/white" android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>