<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimaryLight">

    <TextView
            android:text="@string/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/summary_text" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent"
            android:textAlignment="center" android:textSize="30sp" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.497"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/summary_text" app:layout_constraintHorizontal_bias="0.494"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_arrow_forward_white_48dp"
            android:id="@+id/play_again_button"
            android:background="@drawable/circle_button_shape"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="148dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/home_button" app:layout_constraintHorizontal_bias="0.546"/>
    <TextView
            android:text="@string/heads_up_score_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textColor="@color/colorAccent"
            android:textSize="30sp" android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/divider3"
            android:layout_marginTop="48dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heads_up_score_text" android:textSize="50sp"
            android:textAlignment="center" android:textStyle="bold" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/heads_up_score_bot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/heads_up_score_text" android:textSize="30sp"
            android:textColor="@color/colorAccent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_home_white_48dp"
            android:id="@+id/home_button"
            android:background="@drawable/circle_button_shape" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginEnd="96dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.007"/>
</androidx.constraintlayout.widget.ConstraintLayout>