<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimaryLight">

    <TextView
            android:text="Drużyna A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/round_text" android:textSize="18sp"/>
    <TextView
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/round_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/divider" android:textSize="18sp"/>
    <TextView
            android:layout_height="wrap_content"
            android:id="@+id/time_left_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center" android:textColor="@color/colorPrimary"
            android:textSize="30sp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" android:layout_width="50dp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.494" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:id="@+id/linearLayout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="115dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/taboo_score"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" android:id="@+id/textView2" android:textAlignment="center"
                    android:textSize="18sp"/>
            <TextView
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" android:id="@+id/team_score_text" android:textAlignment="center"
                    android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="115dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/taboo_round_score"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" android:id="@+id/textView5" android:textAlignment="center"
                    android:textSize="18sp"/>
            <TextView
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" android:id="@+id/round_score_text" android:textAlignment="center"
                    android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cardView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintBottom_toTopOf="@+id/time_left_text" android:layout_marginBottom="8dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_margin="5dp">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/keyword_text" android:textAlignment="center"
                    android:textColor="@color/white" android:textSize="30sp" android:textStyle="bold"
                    android:background="@color/colorAccent"/>
            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryLight"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/taboo_word_1_text"
                    android:textAlignment="center" android:background="@color/colorAccent" android:textSize="20sp"
                    android:textColor="@color/white"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/taboo_word_2_text"
                    android:textAlignment="center" android:background="@color/colorAccent" android:textSize="20sp"
                    android:textColor="@color/white"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/taboo_word_3_text"
                    android:textAlignment="center" android:background="@color/colorAccent" android:textSize="20sp"
                    android:textColor="@color/white"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/taboo_word_4_text"
                    android:textAlignment="center" android:background="@color/colorAccent" android:textSize="20sp"
                    android:textColor="@color/white"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/taboo_word_5_text"
                    android:textAlignment="center" android:background="@color/colorAccent" android:textSize="20sp"
                    android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.492"
            android:id="@+id/linearLayout2" android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_clear_white_48dp"
                android:id="@+id/bad_button" android:layout_weight="1" android:layout_marginLeft="30dp"
                android:background="@drawable/circle_button_shape"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_arrow_forward_white_48dp"
                android:id="@+id/drop_button" android:layout_weight="1" android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp" android:background="@drawable/circle_button_shape"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_done_white_48dp"
                android:id="@+id/good_button" android:layout_weight="1"
                android:layout_marginRight="30dp" android:background="@drawable/circle_button_shape"/>
    </LinearLayout>
    <TextView
            android:text="@string/taboo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taboo_title_text"
            android:textColor="@color/colorAccent" android:textAlignment="center" android:textStyle="bold"
            android:textSize="50sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/team_text"
            app:layout_constraintVertical_bias="0.956" app:layout_constraintHorizontal_bias="0.497"/>
</androidx.constraintlayout.widget.ConstraintLayout>